<resources>
    <string name="app_name">ReadNote</string>
    <string name="note">Enter Note</string>
    <string name="pageNumber">page No.</string>
    <string name="pageNo_OnScreen">page %1$d</string>
    <string name="button_addnote">Add Note</string>
    <string name="button_deleteNote">Delete Note</string>
    <string name="button_newnote">New Note</string>
    <string name="button_editBook">Edit Book Details</string>
    <string name="button_saveBook">Save Book Details</string>
    <string name="button_deleteBook">Delete Book</string>
    <string name="action_note">New Note</string>
    <string name="button_saveNote">Save Note</string>
    <string name="action_notelist">Note List</string>
    <string name="add_title">Add Title</string>
    <string name="add_coverImage">Add Cover Image</string>
    <string name="button_changeCover">Change Cover Image</string>
    <string name="add_book">Add Book</string>
    <string name="action_addbook">Add Book</string>
    <string name="snackbar_EmptyNoteContent">Please enter note content</string>
    <string name="snackbar_EmptyBookTitle">Please enter a book title</string>
    <string name="snackbar_EmptyCreds">Please enter username and password</string>
    <string name="snackbar_BadCreds">Incorrect Username or Password</string>
    <string name="snackbar_UsernameTaken">Username already exists. Please Choose Another</string>
    <string name="snackbar_UpdatedDetails">Updated your details!</string>
    <string name="action_booklist">Book List</string>
    <string name="action_logout">Log Out</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="action_account">Account</string>
    <string name="button_updateAccount">UPDATE ACCOUNT</string>
    <string name="title_activity_maps">Maps</string>
    <string name="button_location">Add Location</string>
    <string name="title_activity_map">Map</string>
    <string name="button_locationPresent">See Location</string>
    <string name="addBookError">Error : Couldn\'t Add Book...</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="placeholder_email">user@test.com</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toggle_yes">YES</string>
    <string name="toggle_no">NO</string>
    <string name="mark_important">Mark as Important</string>
    <string name="switch_text_nb">NB</string>
    <string name="mark_favourite">Mark as Favourite</string>
</resources>