<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bookFragment"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/action_addbook" />
        <item
            android:id="@+id/bookListFragment"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/action_booklist" />
        <item
            android:id="@+id/signout"
            android:icon="@android:drawable/ic_menu_revert"
            android:onClick="signOut"
            android:title="@string/sign_out" />
    </group>
</menu>