<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="notevm"
            type="ie.wit.readnote.ui.note.NoteViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.NoteFragment">


    <EditText
        android:id="@+id/addPageNumber"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:hint="@string/pageNumber"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        android:text="@={notevm.observableNote.pageNumber}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <NumberPicker
        android:id="@+id/pagePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addPageNumber"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addContent"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:hint="@string/note"
        android:inputType="text"
        android:maxLength="500"
        android:maxLines="10"
        android:padding="8dp"
        android:textSize="14sp"
        android:text="@={notevm.observableNote.content}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3"/>


    <Button
        android:id="@+id/addNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignEnd="@+id/addContent"
        android:layout_below="@+id/addContent"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/button_addnote"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/deleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignEnd="@+id/addContent"
        android:layout_below="@+id/addContent"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/button_deleteNote"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_important"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <CheckBox
        android:id="@+id/nbToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="@={notevm.observableNote.nb}"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="472dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>